Reduce FindBugs warnings Use valueOf()
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/dbcp/trunk@1557574 13f79535-47bb-0310-9956-ffa450edef68